--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"start": "node src/index.js"
 	},
 	"dependencies": {
+		"glob": "^10.3.3",
 		"gray-matter": "^4.0.3",
 		"marked": "^5.1.0",
 		"mkdirp": "^3.0.1"
